CSS: Make import statements consistent (#1762)
Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/_code_editor.scss
+++ b/editor-ui/sass/_code_editor.scss
@@ -1,6 +1,6 @@
-@import 'node_modules/@playcanvas/pcui/dist/variables.scss';
-@import 'node_modules/@playcanvas/pcui/dist/theme-colors-green.scss';
-@import 'node_modules/@playcanvas/pcui/dist/fonts.scss';
+@import 'node_modules/@playcanvas/pcui/dist/variables';
+@import 'node_modules/@playcanvas/pcui/dist/theme-colors-green';
+@import 'node_modules/@playcanvas/pcui/dist/fonts';
 @import 'fonts';
 
 $editor-bg: #1d292c;
