--- a/editor-ui/sass/pcui/_pcui.scss
+++ b/editor-ui/sass/pcui/_pcui.scss
@@ -1,8 +1,8 @@
 // external pcui styling
-@import 'node_modules/@playcanvas/pcui/dist/pcui-theme-green.scss';
+@import 'node_modules/@playcanvas/pcui/dist/pcui-theme-green';
 
 // external pcui graph styling
-@import 'node_modules/@playcanvas/pcui-graph/dist/pcui-graph.scss';
+@import 'node_modules/@playcanvas/pcui-graph/dist/pcui-graph';
 
 // editor specific pcui controls and extensions
 @import 'pcui-common';
