--- a/editor-ui/sass/_error.scss
+++ b/editor-ui/sass/_error.scss
@@ -1,5 +1,5 @@
-@import 'node_modules/@playcanvas/pcui/dist/variables.scss';
-@import 'node_modules/@playcanvas/pcui/dist/theme-colors-green.scss';
+@import 'node_modules/@playcanvas/pcui/dist/variables';
+@import 'node_modules/@playcanvas/pcui/dist/theme-colors-green';
 
 body {
     font-family: 'courier new', monospace;
