More Stylelint fixes (#1765)
* Fix more Stylelint problems

* Revert font-smooth fix

* Delete commented out CSS properties

* Set indentation to 4 spaces

* Run rule function-comma-newline-after

* Standardize on single quotes

* Run rule selector-list-comma-newline-after

* More fixes

Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/sass/_code_editor.scss
+++ b/editor-ui/sass/_code_editor.scss
@@ -119,7 +119,8 @@ body {
             @extend .font-regular;
         }
 
-        .code-editor-save, .code-editor-revert {
+        .code-editor-save,
+        .code-editor-revert {
             font-size: 16px;
             color: #fff;
             opacity: 0.75;
@@ -244,16 +245,17 @@ body {
     }
 
     .CodeMirror-cursor {
-       border-left: 1px solid $editor-text-color !important;
-       border-right: 1px solid $editor-text-color !important;
-       margin-left: -1px;
+        border-left: 1px solid $editor-text-color !important;
+        border-right: 1px solid $editor-text-color !important;
+        margin-left: -1px;
     }
 
     span.cm-comment {
         color: $editor-comment;
     }
 
-    span.cm-atom, span.cm-keyword {
+    span.cm-atom,
+    span.cm-keyword {
         color: $editor-keyword;
     }
 
@@ -273,7 +275,9 @@ body {
         color: $editor-string;
     }
 
-    span.cm-tag, span.cm-qualifier, span.cm-builtin {
+    span.cm-tag,
+    span.cm-qualifier,
+    span.cm-builtin {
         color: $editor-tag;
     }
 
