--- a/editor-ui/sass/editor/_editor-component-script-inspector.scss
+++ b/editor-ui/sass/editor/_editor-component-script-inspector.scss
@@ -6,7 +6,9 @@
     margin-bottom: 2px;
 
     .pcui-inspector {
-        > .pcui-label-group, > .pcui-asset-input, > .pcui-panel {
+        > .pcui-label-group,
+        > .pcui-asset-input,
+        > .pcui-panel {
             margin: 3px;
         }
     }
