--- a/editor-ui/sass/editor/_editor-entities-treeview.scss
+++ b/editor-ui/sass/editor/_editor-entities-treeview.scss
@@ -24,7 +24,8 @@
                 @extend .font-icon;
             }
 
-            &.pcui-treeview-item-selected, &:hover {
+            &.pcui-treeview-item-selected,
+            &:hover {
                 > .pcui-treeview-item-text:before {
                     color: $text-primary;
                 }
