--- a/editor-ui/sass/editor/_editor-hierarchy-panel.scss
+++ b/editor-ui/sass/editor/_editor-hierarchy-panel.scss
@@ -1,4 +1,5 @@
-#layout-hierarchy, #layout-attributes-secondary {
+#layout-hierarchy,
+#layout-attributes-secondary {
 
     border-left: 1px solid $bcg-darker;
 
@@ -60,7 +61,7 @@
                     font-weight: 700;
                     font-size: 12px;
                     line-height: 12px;
-                    font-family: "Proxima Nova Bold";
+                    font-family: 'Proxima Nova Bold';
 
                     letter-spacing: 0.2px;
                     text-transform: capitalize;
@@ -103,7 +104,7 @@
                     font-weight: 700;
                     font-size: 12px;
                     line-height: 16px;
-                    font-family: "Proxima Nova Bold";
+                    font-family: 'Proxima Nova Bold';
 
                     letter-spacing: 0.2px;
                     text-transform: capitalize;
@@ -176,7 +177,7 @@
                     font-weight: 400;
                     font-size: 14px;
                     line-height: 14px;
-                    font-family: "Proxima Nova Regular";
+                    font-family: 'Proxima Nova Regular';
                     padding: 0;
                 }
 
