--- a/editor-ui/sass/_fonts.scss
+++ b/editor-ui/sass/_fonts.scss
@@ -1,10 +1,11 @@
 @font-face {
     font-family: 'Proxima Nova Regular';
     src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.eot');
-    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.eot?#iefix') format('embedded-opentype'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.woff2') format('woff2'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.woff') format('woff'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.ttf') format('truetype');
+    src:
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.eot?#iefix') format('embedded-opentype'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.woff2') format('woff2'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.woff') format('woff'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -12,10 +13,11 @@
 @font-face {
     font-family: 'Proxima Nova Light';
     src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.eot');
-    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.eot?#iefix') format('embedded-opentype'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.woff2') format('woff2'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.woff') format('woff'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.ttf') format('truetype');
+    src:
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.eot?#iefix') format('embedded-opentype'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.woff2') format('woff2'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.woff') format('woff'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_light.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
 }
@@ -23,10 +25,11 @@
 @font-face {
     font-family: 'Proxima Nova Bold';
     src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.eot');
-    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.eot?#iefix') format('embedded-opentype'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.woff2') format('woff2'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.woff') format('woff'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.ttf') format('truetype');
+    src:
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.eot?#iefix') format('embedded-opentype'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.woff2') format('woff2'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.woff') format('woff'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
 }
@@ -34,10 +37,11 @@
 @font-face {
     font-family: 'Proxima Nova Thin';
     src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.eot');
-    src: url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.eot?#iefix') format('embedded-opentype'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.woff2') format('woff2'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.woff') format('woff'),
-         url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.ttf') format('truetype');
+    src:
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.eot?#iefix') format('embedded-opentype'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.woff2') format('woff2'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.woff') format('woff'),
+        url('https://playcanvas.com/static-assets/fonts/proxima_nova_thin_t.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
