--- a/editor-ui/sass/editor/_editor-settings-layers-panel.scss
+++ b/editor-ui/sass/editor/_editor-settings-layers-panel.scss
@@ -1,4 +1,5 @@
-.layers-settings-panel-render-order-panel, .layers-settings-panel-render-order-list-container {
+.layers-settings-panel-render-order-panel,
+.layers-settings-panel-render-order-list-container {
     margin: $element-margin;
 }
 
@@ -10,13 +11,15 @@
     border: 1px solid $bcg-darkest;
 }
 
-.layers-settings-panel-render-order-list-item, .layers-settings-panel-layer-panel {
+.layers-settings-panel-render-order-list-item,
+.layers-settings-panel-layer-panel {
     border-top: 1px solid $bcg-darkest;
     border-left: 1px solid $bcg-darkest;
     border-right: 1px solid $bcg-darkest;
 }
 
-.layers-settings-panel-render-order-list-item:last-child, .layers-settings-panel-layer-panel:last-child {
+.layers-settings-panel-render-order-list-item:last-child,
+.layers-settings-panel-layer-panel:last-child {
     border-bottom: 1px solid $bcg-darkest;
 }
 
