--- a/editor-ui/sass/editor/_editor.scss
+++ b/editor-ui/sass/editor/_editor.scss
@@ -1,48 +1,48 @@
-@import "../pcui/pcui";
-@import "../fonts";
-@import "../ui";
-@import "../editor";
-@import "../theme-dark";
-@import "editor-common";
-@import "editor-layout";
-@import "editor-left-toolbar";
-@import "editor-statusbar";
-@import "editor-hierarchy-panel";
-@import "editor-assets-panel";
-@import "editor-attributes-panel";
-@import "editor-usage-alert";
-@import "editor-entities-treeview";
-@import "editor-entity-inspector";
-@import "editor-template-overrides-view";
-@import "editor-template-entity-inspector";
-@import "editor-template-override-inspector";
-@import "editor-component-inspector";
-@import "editor-component-model-inspector";
-@import "editor-component-script-inspector";
-@import "editor-component-sound-inspector";
-@import "editor-component-sprite-inspector";
-@import "editor-component-anim-inspector";
-@import "editor-component-animation-inspector";
-@import "editor-asset-preview";
-@import "editor-asset-model-inspector";
-@import "editor-asset-material-inspector";
-@import "editor-asset-cubemap-inspector";
-@import "editor-asset-animstategraph-inspector";
-@import "editor-asset-anim-viewer";
-@import "editor-asset-animation-inspector";
-@import "editor-asset-texture-inspector";
-@import "editor-asset-audio-inspector";
-@import "editor-asset-script-inspector";
-@import "editor-asset-related-assets";
-@import "editor-asset-source-inspector";
-@import "editor-asset-font-inspector";
-@import "editor-asset-sprite-preview";
-@import "editor-settings-panel";
-@import "editor-settings-rendering-panel";
-@import "editor-settings-layers-panel";
-@import "editor-settings-batchgroups-panel";
-@import "editor-settings-asset-tasks";
-@import "editor-settings-scripts-panel";
-@import "editor-tooltip-reference";
-@import "editor-release-notes";
-@import "editor-fix-templates";
+@import '../pcui/pcui';
+@import '../fonts';
+@import '../ui';
+@import '../editor';
+@import '../theme-dark';
+@import 'editor-common';
+@import 'editor-layout';
+@import 'editor-left-toolbar';
+@import 'editor-statusbar';
+@import 'editor-hierarchy-panel';
+@import 'editor-assets-panel';
+@import 'editor-attributes-panel';
+@import 'editor-usage-alert';
+@import 'editor-entities-treeview';
+@import 'editor-entity-inspector';
+@import 'editor-template-overrides-view';
+@import 'editor-template-entity-inspector';
+@import 'editor-template-override-inspector';
+@import 'editor-component-inspector';
+@import 'editor-component-model-inspector';
+@import 'editor-component-script-inspector';
+@import 'editor-component-sound-inspector';
+@import 'editor-component-sprite-inspector';
+@import 'editor-component-anim-inspector';
+@import 'editor-component-animation-inspector';
+@import 'editor-asset-preview';
+@import 'editor-asset-model-inspector';
+@import 'editor-asset-material-inspector';
+@import 'editor-asset-cubemap-inspector';
+@import 'editor-asset-animstategraph-inspector';
+@import 'editor-asset-anim-viewer';
+@import 'editor-asset-animation-inspector';
+@import 'editor-asset-texture-inspector';
+@import 'editor-asset-audio-inspector';
+@import 'editor-asset-script-inspector';
+@import 'editor-asset-related-assets';
+@import 'editor-asset-source-inspector';
+@import 'editor-asset-font-inspector';
+@import 'editor-asset-sprite-preview';
+@import 'editor-settings-panel';
+@import 'editor-settings-rendering-panel';
+@import 'editor-settings-layers-panel';
+@import 'editor-settings-batchgroups-panel';
+@import 'editor-settings-asset-tasks';
+@import 'editor-settings-scripts-panel';
+@import 'editor-tooltip-reference';
+@import 'editor-release-notes';
+@import 'editor-fix-templates';
