--- a/editor-ui/sass/pcui/_pcui-color-input.scss
+++ b/editor-ui/sass/pcui/_pcui-color-input.scss
@@ -60,8 +60,9 @@
 }
 
 // hover / focus states
-.pcui-color-input:not(.pcui-disabled):not(.pcui-readonly) {
-    &:hover, &:focus {
+.pcui-color-input:not(.pcui-disabled, .pcui-readonly) {
+    &:hover,
+    &:focus {
         box-shadow: $element-shadow-hover;
 
         &:after {
